--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="style.css" />
-    <title>ALURAFLIX</title>
+    <title>DIFLIX</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -13,7 +13,7 @@
 <body>
 
 
-    <header>ALURAFLIX</header>
+    <header>DIFLIX</header>
     <section class="chamada">
         <div class="chamada-texto">
             <h1>ATRAVÉS DO ARANHAVERSO</h1>
